# tqsim

./: .gitignore  .readthedocs.yaml  C02_Topological_Braiding_Circuit_Simulator.ipynb  LICENSE  README.md  anyon_simulator.py  citation.bib  cplot.py  pyproject.toml  testing_notebook.ipynb  unittest.py
.circleci/: config.yml
braiding_generators/: fib_multi_qudits_.py
braiding_generators/n1a2/: basis.pkl  braiding_generator1.pkl  braiding_generator2.pkl
braiding_generators/n1a3/: basis.pkl  braiding_generator1.pkl  braiding_generator2.pkl  braiding_generator3.pkl
braiding_generators/n2a2/: basis.pkl  braiding_generator1.pkl  braiding_generator2.pkl  braiding_generator3.pkl  braiding_generator4.pkl  braiding_generator5.pkl
braiding_generators/n2a3/: basis.pkl  braiding_generator1.pkl  braiding_generator2.pkl  braiding_generator3.pkl  braiding_generator4.pkl  braiding_generator5.pkl  braiding_generator6.pkl  braiding_generator7.pkl
braiding_generators/n3a2/: basis.pkl  braiding_generator1.pkl  braiding_generator2.pkl  braiding_generator3.pkl  braiding_generator4.pkl  braiding_generator5.pkl  braiding_generator6.pkl  braiding_generator7.pkl  braiding_generator8.pkl
braiding_generators/n3a3/: basis.pkl  braiding_generator1.pkl  braiding_generator10.pkl  braiding_generator11.pkl  braiding_generator2.pkl  braiding_generator3.pkl  braiding_generator4.pkl  braiding_generator5.pkl  braiding_generator6.pkl  braiding_generator7.pkl  braiding_generator8.pkl  braiding_generator9.pkl
braiding_generators/n4a2/: basis.pkl  braiding_generator1.pkl  braiding_generator10.pkl  braiding_generator11.pkl  braiding_generator2.pkl  braiding_generator3.pkl  braiding_generator4.pkl  braiding_generator5.pkl  braiding_generator6.pkl  braiding_generator7.pkl  (+2 more)
cqt_anyons/: __init__.py  circuit.py
source/: conf.py  index.rst
tests/: __init__.py  test_circuit.py
tqsim/: __init__.py  circuit.py  config.py
(+15 files in other folders)
