[tool.poetry]
name = "tqsim"
version = "0.0.3"
description = "TQSim is a Topological Quantum Computing simulator based on Anyon models"
authors = [ "CQTech.org <constantinequantumtech@gmail.com>",
            "Mohamed Messaoud Louamri <mm.louamri@gmail.com>", 
            "Abdellah Tounsi <abdellah.tounsi@umc.edu.dz>",
            "Nacer eddine Belaloui <n.aityahia.belaloui@gmail.com>",
            "Mohamed Taha Rouabah <m.t.rouabah@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/Constantine-Quantum-Tech/tqsim"
keywords = ["topological quantum computing", "quantum", "quantum computing", "anyons", "simulator"] 


readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
